terraform/main.tf
terraform {
  required_version = "0.12"
  backend "s3" {
    bucket = "myapp-bucket-299"
    key = "myapp/state.tfstate"
    region = "us-east-1"
  }
}



provider "aws" {
  region = var.region
}



# variable public_key_location {}
#
# variable private_key_location {}

resource "aws_vpc" "myapp-vpc" {
  # cidr_block = "10.0.0.0/16"
  cidr_block = var.vpc_cidr_block
  tags = {
    Name = "${var.env_prefix}-vpc"
  }
}

resource "aws_subnet" "myapp-subnet-1" {
  vpc_id = aws_vpc.myapp-vpc.id
  cidr_block = var.subnet_cidr_block
  # cidr_block = "10.0.10.0/24"
  # availability_zone = "us-east-1a"
  availability_zone = var.avail_zone
  tags = {
        Name = "${var.env_prefix}-subnet-1"
    }
}

resource "aws_internet_gateway" "myapp-igw" {
  vpc_id = aws_vpc.myapp-vpc.id
  tags = {
    Name = "${var.env_prefix}-igw"
  }
}

resource "aws_default_route_table" "myapp-route-table" {
  default_route_table_id = aws_vpc.myapp-vpc.default_route_table_id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.myapp-igw.id

  }
  tags = {
    Name = "${var.env_prefix}-main-rtb"
  }
}

# resource "aws_route_table" "myapp-route-table" {
#   vpc_id = aws_vpc.myapp-vpc.id
#   tags = {
#     Name = "${var.env_prefix}-route-table"
#   }
#   route {
#     cidr_block = "0.0.0.0/0"
#     gateway_id = aws_internet_gateway.myapp-igw.id
#   }
# }

# resource "aws_route_table_association" "a-rtb-subnet" {
#   subnet_id = aws_subnet.myapp-subnet-1.id
#   route_table_id = aws_route_table.myapp-route-table.id
# }


resource "aws_default_security_group" "default-sg" {

  vpc_id = aws_vpc.myapp-vpc.id

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = [var.my_ip, var.jenkins_ip]


    }

  ingress {
    from_port = 8080
    to_port = 8080
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]


    }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    prefix_list_ids = []


  }

  tags = {
    Name = "${var.env_prefix}-default-sg"
  }
}


# resource "aws_security_group" "myapp-sg" {
#   name = "myapp-sg"
#   description = "Allow SSH and HTTP traffic"
#   vpc_id = aws_vpc.myapp-vpc.id

#   ingress {
#     from_port = 22
#     to_port = 22
#     protocol = "tcp"
#     cidr_blocks = [var.my_ip]


#     }

#   ingress {
#     from_port = 8080
#     to_port = 8080
#     protocol = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]


#     }

#   egress {
#     from_port = 0
#     to_port = 0
#     protocol = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#     prefix_list_ids = []


#   }

#   tags = {
#     Name = "${var.env_prefix}-sg"
#   }
# }


data "aws_ami" "latest_amazon_linux" {
  most_recent = true
  filter {
    name   = "name"
    values = ["amzn2-ami-hvm-*-x86_64-gp2"]
  }
  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
  owners = ["amazon"]
}

# output "aws_ami_id" {
#   value = data.aws_ami.latest_amazon_linux.id
# }

output "ec2_public_ip" {
  value = aws_instance.myapp-server.public_ip
}


# resource "aws_key_pair" "ssh-key" {
#   key_name   = "server-key"
#   public_key = "${file(var.public_key_location)}"
# }

resource "aws_instance" "myapp-server" {
  ami           = data.aws_ami.latest_amazon_linux.id
  instance_type = var.instance_type
  subnet_id     = aws_subnet.myapp-subnet-1.id
  vpc_security_group_ids = [aws_default_security_group.default-sg.id]
  availability_zone = var.avail_zone

  associate_public_ip_address = true
#   key_name = aws_key_pair.ssh-key.key_name
  key_name = "myapp-key-pair"
  # user_data = <<-EOF
  #             #!/bin/bash
  #             sudo yum update -y && sudo yum install -y docker
  #             sudo systemctl start docker
  #             sudo usermod -aG docker ec2-user
  #             sudo docker run -d -p 8080:80 nginx
  #             echo "Hello World from ${var.env_prefix} environment" | sudo tee /usr/share/nginx/html/index.html
  #             EOF


  user_data = file("entry-script.sh")

#   connection {
#     type        = "ssh"
#     host        = self.public_ip
#     user        = "ec2-user"
#     private_key = file(var.private_key_location)
#   }
#
#   # Use for copying file to remote server
#   provisioner "file" {
#     source      = "entry-script.sh"
#     destination = "/home/ec2-user/entry-script.sh"
#   }
#

  #   provisioner "file" {
  #   source      = "entry-script.sh"
  #   destination = "/home/ec2-user/entry-script.sh"
  #   connection {
  #       type        = "ssh"
  #       host        = someotherserver.public_ip
  #       user        = "ec2-user"
  #       private_key = file(var.private_key_location)
  #   }

  # }

#   provisioner "remote-exec" {
#     script = file("entry-script.sh")
#     # inline = [
#     #   "export ENV=dev",
#     #   "mkdir newdir",
#     #   "sudo yum update -y && sudo yum install -y docker",
#     #   "sudo systemctl start docker",
#     #   "sudo usermod -aG docker ec2-user",
#     #   "sudo docker run -d -p 8080:80 nginx",
#     #   "echo 'Hello World from ${var.env_prefix} environment' | sudo tee /usr/share/nginx/html/index.html"
#     # ]
#
#
#
#   }
#
#   provisioner "local-exec" {
#     command = "echo ${self.public_ip} > server_ip.txt"
#   }

  tags = {
    Name = "${var.env_prefix}-server"
  }
}
